tests/reference/asr-test_import_01-b859c43.stderr
semantic error: Type mismatch in procedure call; the types must be compatible
 --> tests/errors/test_import_01.py:4:22
  |
4 | X: Const[f64] = test(5.0)
  |                      ^^^ type mismatch (passed argument type is f64 but required type is i32)

 --> tests/errors/test_import/test_import_1.py:5:89
  |
5 | 
  |                                                                                         ^^^ type mismatch (passed argument type is f64 but required type is i32)
